# mirpy

./: .gitignore  .gitlab-ci.yml  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  REPERTOIRE_EMBEDDING.md  REPERTOIRE_LESSONS.md  ROADMAP.md  SOURCES.md  SQRT_D_MIGRATION.md  THEORY.md  TODO.md  benchmarks.md  checks.py  environment.txt  environment.yml  pyproject.toml  quick_setup.sh  requirements.txt  sandbox.py  sandbox_dict.py  sandbox_trie.py  setup.sh  test_parallel.py
.claude/: settings.local.json
.github/agents/: mirpy-analysis.agent.md
.github/instructions/: notebook-ipynb.instructions.md  test-execution.instructions.md
.github/prompts/: mirpy-analysis.prompt.md
.github/workflows/: ci.yml  docs.yml  publish.yml  testpypi.yml  tests.yml
appendix/: .latexmkrc  Makefile  README.md  diagram_embedding.dot  fig_s1_distributions.gp  fig_s2_correlation.gp  fig_s3_prototype_source.gp  gen_theory_data.py  refs.bib  tcremp_theory.tex
appendix/data/: s1_diss_curves.tsv  s1_diss_hist.tsv  s1_dist_curves.tsv  s1_dist_hist.tsv  s2_gapblock.tsv  s2_sw.tsv  s3.tsv  theory_stats.txt
benchmarks/: covid19_associations_benchmark.py  covid19_fisher_scan.py  covid19_load_paired.py  covid19_reference_split_benchmark.py  covid19_svm_benchmark.py  covid19_svm_features.py
docs/: Makefile  api.rst  conf.py  embedding-your-repertoire.rst  examples.rst  getting-started.rst  index.rst  mir.basic.rst  mir.bench.rst  mir.biomarkers.rst  mir.common.rst  mir.comparative.rst  mir.distances.rst  mir.embedding.rst  mir.graph.rst  mir.ml.rst  mir.rst  mir.utils.rst  modules.rst  references.rst  requirements.txt  sync_notebooks.py  usage.rst
docs/_static/: custom.css
docs/notebooks/: aging_analysis.ipynb  aging_analysis_functional.ipynb  alice_analysis.ipynb  biomarkers_inference.ipynb  biomarkers_inference.nblink  cdr3_aln_benchmark.ipynb  cdr3_aln_benchmark.nblink  cdr3_graph.ipynb  cdr3_graph.nblink  cluster_associations.ipynb  cluster_associations.nblink  covid19_biomarkers.ipynb  covid19_hla_biomarkers.ipynb  covid19_pairing_biomarkers.ipynb  diversity_analysis.ipynb  diversity_estimation.ipynb  diversity_estimation.nblink  edit_distance_graph.ipynb  embed_any_chain.ipynb  gene_similarity.ipynb  gene_usage_correction.ipynb  gliph_analysis.ipynb  grid_search_clf.ipynb  grid_search_clf.nblink  index.rst  kmer_generator.ipynb  kmer_generator.nblink  metaclonotype_examples.ipynb  metaclonotype_method_compare.ipynb  motif_logos.ipynb  parsing_airr.ipynb  parsing_airr.nblink  parsing_example.ipynb  pgen_analysis.ipynb  proto_embedding_new.ipynb  proto_embedding_new.nblink  prototype_embedding.ipynb  prototype_embedding.nblink  repertoire_resampling.ipynb  repertoire_resampling.nblink  (+17 more)
examples/: quickstart.py  theory.py
experiments/: _cohort.py  _covid.py  _hf.py  _tcga.py  _tcga_embedding.py  _tcga_features.py  analyze_epitope_variability.py  analyze_pc_decomposition.py  analyze_prototype_counts.py  benchmark_ann.py  benchmark_clustering.py  benchmark_codec_chains.py  benchmark_codec_losslessness.py  benchmark_density_ankspond.py  benchmark_density_tcrnet.py  benchmark_density_vdjdb.py  benchmark_density_yfv.py  benchmark_igh_shm.py  benchmark_lossless_depth.py  benchmark_lossless_kpc.py  benchmark_pgen_variants.py  benchmark_repertoire_agediverge.py  benchmark_repertoire_aging.py  benchmark_repertoire_cmvhla.py  benchmark_repertoire_covidbatch.py  benchmark_repertoire_covidhla.py  benchmark_repertoire_covidmotif.py  benchmark_repertoire_covidpaired.py  benchmark_repertoire_covidstatus.py  benchmark_repertoire_covidwitness.py  benchmark_repertoire_depth.py  benchmark_repertoire_hla.py  benchmark_repertoire_hlapanel.py  benchmark_repertoire_spectral.py  benchmark_repertoire_spikein.py  benchmark_repertoire_tcga.py  benchmark_repertoire_tcga_insilico.py  benchmark_repertoire_tcga_pancancer.py  benchmark_repertoire_tcga_survival.py  benchmark_repertoire_tcga_tme.py  (+8 more)
mir/: __init__.py  _cli.py  benchmark.py  checks.py  cohort.py  density.py  explain.py  repertoire.py
mir/_skills/: mirpy
mir/airr/: __init__.py
notebooks/: aging_analysis.ipynb  aging_analysis_functional.ipynb  alice_analysis.ipynb  biomarkers_inference.ipynb  cdr3_aln_benchmark.ipynb  cdr3_graph.ipynb  cluster_associations.ipynb  covid19_biomarkers.ipynb  covid19_hla_biomarkers.ipynb  covid19_pairing_biomarkers.ipynb  density.py  diversity.ipynb  diversity_analysis.ipynb  diversity_estimation.ipynb  edit_distance_graph.ipynb  embed_any_chain.ipynb  gene_similarity.ipynb  gene_usage_correction.ipynb  gliph_analysis.ipynb  grid_search_clf.ipynb  hamming_graph.ipynb  kmer_generator.ipynb  metaclonotype_examples.ipynb  metaclonotype_method_compare.ipynb  motif_logos.ipynb  parsers.ipynb  parsing_airr.ipynb  parsing_example.ipynb  pgen_analysis.ipynb  proto_embedding_new.ipynb  prototype_embedding.ipynb  repertoire_resampling.ipynb  sample_repertoire_overview.ipynb  segment_similarity.ipynb  segment_usage_analysis.ipynb  setup_assets.ipynb  single_cell_load.ipynb  single_cell_pairing_analysis.ipynb  tcrdist_analysis.ipynb  tcremp_10x_paired_analysis.ipynb  (+11 more)
src/mir/: cli.py  (+4 more)
test/: repertoire_tests.py  segments_tests.py  sequence_tests.py
tests/: benchmark_helpers.py  conftest.py  factories.py  prepare_airr_benchmark_data.py  sc_helpers.py  test_aliases.py  test_alice.py  test_alice_benchmark.py  test_alice_tcrnet_benchmark.py  test_aligner.py  test_alleles.py  test_alphabets.py  test_associations.py  test_associations_covid19_benchmark.py  test_bag_of_kmers.py  test_bag_of_kmers_benchmark.py  test_bench.py  test_cli.py  test_clonotype.py  test_cohort.py  test_compat_shims.py  test_control.py  test_control_benchmark.py  test_dataset_correction.py  test_density.py  test_diversity.py  test_edit_distance_graph.py  test_edit_distance_graph_convergent.py  test_embedding_diagnostics.py  test_eval.py  test_explain.py  test_filter.py  test_gene_library.py  test_gene_library_build.py  test_gene_usage.py  test_germline.py  test_gliph_benchmark.py  test_gliph_control_benchmark.py  test_gliph_unit.py  test_io_parallel.py  (+72 more)
(+220 files in other folders)
