[build-system]
requires = [
  "setuptools>=68",
  "scikit-build-core",
  "pybind11",
  "numpy",
  "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "mirpy-lib"
version = "1.1.1"
authors = [
  { name="ISALGO lab", email="mikhail.shugay@gmail.com"}
]
description = "A library for managing and analyzing immunosequencing data"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
keywords = ["immunosequencing", "AIRR", "TCR", "BCR", "repertoire", "single-cell", "VDJdb"]
dependencies = [
  "biopython",
  "kneed",
  "matplotlib",
  "multipy",
  "numpy",
  "olga",
  "pandas",
  "pyarrow",
  "polars",
  "pympler",
  "python_igraph",
  "scipy",
  "seaborn",
  "scikit-learn",
  "statsmodels",
  "textdistance",
  "tcrtrie",
  "tqdm",
  "adjustText",
]
license = {text = "GPL-3.0 license"}

[project.optional-dependencies]
sc = [
  "scanpy",
  "scirpy",
  "sc-dandelion",
  "umap-learn",
]
# Build-time only: regenerate region_annotations.txt or annotate a custom gene
# library. Also requires the `mmseqs2` binary (conda install -c bioconda mmseqs2).
# Plain embedding/similarity never import arda. arda is distributed on GitHub
# (not PyPI), so this extra uses a direct reference.
arda = [
  "arda @ git+https://github.com/antigenomics/arda.git",
]
dev = [
  "pytest>=8",
  "pylint",
  "huggingface_hub",
  "psutil>=5",
  "scanpy",
  "scirpy",
  "sc-dandelion",
  "umap-learn",
]
docs = [
  "sphinx>=7.2,<9",
  "pydata-sphinx-theme>=0.15,<1",
  "nbsphinx>=0.9,<1",
  "nbsphinx-link>=1.3,<2",
  "ipython>=8,<10",
]

[project.urls]
Homepage      = "https://github.com/antigenomics/mirpy"
Documentation = "https://antigenomics.github.io/mirpy"
Issues        = "https://github.com/antigenomics/mirpy/issues"

[project.scripts]
mirpy = "mir._cli:main"
mirpy-control-setup = "mir.common.control:control_setup_cli"

[tool.scikit-build]
wheel.packages = ["mir"]
sdist.exclude = [
  ".github/**",
  ".idea/**",
  ".tmp/**",
  ".vscode/**",
  "docs/_build/**",
  "mir/docs/_build/**",
  "notebooks/**",
  "public/**",
  "test/**",
  "tests/**",
  "wheeltest/**",
]
logging.level = "INFO"

[tool.pytest.ini_options]
markers = [
  "benchmark: performance-oriented tests excluded from the default test run",
  "integration: slow or environment-dependent tests excluded from the default test run",
  "slow_benchmark: long-running benchmark with slow timeout budget",
  "very_slow_benchmark: extra long benchmark with very-slow timeout budget",
]
