[build-system]
requires = [
  "setuptools>=68",
  "scikit-build-core",
  "pybind11",
  "numpy",
  "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "mirpy-lib"
version = "1.3.0"
authors = [
  { name="ISALGO lab", email="mikhail.shugay@gmail.com"}
]
description = "A library for managing and analyzing immunosequencing data"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
keywords = ["immunosequencing", "AIRR", "TCR", "BCR", "repertoire", "single-cell", "VDJdb"]
dependencies = [
  "biopython",
  "kneed",
  "matplotlib",
  "numpy",
  "olga",
  "pandas",
  "pyarrow",
  "polars",
  "python_igraph",
  "scipy",
  "seaborn",
  "scikit-learn",
  "statsmodels",
  "seqtree>=0.0.3",
  "tqdm",
  "adjustText",
]
license = {text = "GPL-3.0 license"}

[project.optional-dependencies]
sc = [
  "scanpy",
  "scirpy",
  "sc-dandelion",
  "umap-learn",
]
# Build-time only: regenerate region_annotations.txt or annotate a custom gene
# library. Also requires the `mmseqs2` binary (conda install -c bioconda mmseqs2).
# Plain embedding/similarity never import arda.
arda = [
  "arda>=2.0.2",
]
dev = [
  "pytest>=8",
  "pytest-cov",
  "pylint",
  "huggingface_hub",
  "psutil>=5",
  "scanpy",
  "scirpy",
  "sc-dandelion",
  "umap-learn",
]
docs = [
  "sphinx>=7.2,<9",
  "pydata-sphinx-theme>=0.15,<1",
  "nbsphinx>=0.9,<1",
  "nbsphinx-link>=1.3,<2",
  "ipython>=8,<10",
]

[project.urls]
Homepage      = "https://github.com/antigenomics/mirpy"
Documentation = "https://antigenomics.github.io/mirpy"
Issues        = "https://github.com/antigenomics/mirpy/issues"

[project.scripts]
mirpy = "mir._cli:main"
mirpy-control-setup = "mir.common.control:control_setup_cli"

[tool.scikit-build]
wheel.packages = ["mir"]
sdist.exclude = [
  ".github/**",
  ".idea/**",
  ".tmp/**",
  ".vscode/**",
  "docs/_build/**",
  "mir/docs/_build/**",
  "notebooks/**",
  "public/**",
  "test/**",
  "tests/**",
  "wheeltest/**",
]
logging.level = "INFO"

[tool.pytest.ini_options]
markers = [
  "benchmark: performance-oriented tests excluded from the default test run",
  "integration: slow or environment-dependent tests excluded from the default test run",
  "slow_benchmark: long-running benchmark with slow timeout budget",
  "very_slow_benchmark: extra long benchmark with very-slow timeout budget",
]

# Coverage is opt-in (not in addopts) so the default fast suite stays fast.
# Measure with: pytest -m "not benchmark and not integration" --cov=mir --cov-report=term-missing
[tool.coverage.run]
source = ["mir"]
branch = true
omit = [
  "mir/resources/gene_library/build_gene_library.py",
  "mir/resources/gene_library/build_region_annotations.py",
  "mir/resources/prototypes/generate_prototypes.py",
  # build-time only: needs the optional `arda` extra + the mmseqs2 binary
  "mir/common/region_annotation.py",
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
