[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirpy-lib"
version = "3.1.1"
authors = [
  { name="ISALGO lab", email="mikhail.shugay@gmail.com"}
]
description = "ML-oriented embeddings for immune receptor repertoires (TCR/BCR)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
]
keywords = ["immunosequencing", "AIRR", "TCR", "BCR", "embedding", "prototypes", "VDJdb"]
dependencies = [
  "numpy",
  "polars",
  "scikit-learn",
  "scipy",          # density-ratio enrichment tests (mir.density) + theory fits
  "seqtree>=0.3.0",
  # AIRR data model (polars schema + IO), germline reference, VDJ-rearrangement
  # Pgen + synthetic sampling. mirpy has no data-model layer of its own.
  "vdjtools>=2.3.0",
  "tqdm",
]
license = { text = "GPL-3.0-or-later" }

[project.optional-dependencies]
# VDJdb annotation / E-values for the benchmark harness.
annotate = ["vdjmatch"]
# Build-time only: regenerate region_annotations.txt (arda) and the baked
# germline distance matrices (BioPython). Runtime needs neither. arda comes
# via vdjtools[model] (single arda version across the ecosystem), not pinned directly.
build = ["vdjtools[model]>=2.3.0", "biopython"]
# Part 2: neural codecs and density methods.
ml = ["torch"]
# Benchmark harness: DBSCAN eps selection + plotting + HuggingFace dataset fetch.
bench = ["kneed", "matplotlib", "seaborn", "huggingface_hub", "pynndescent"]
# Interactive marimo notebooks (docs/examples).
examples = ["marimo", "matplotlib", "umap-learn"]
dev = ["pytest>=8", "pytest-cov", "psutil>=5"]
docs = [
  "sphinx>=7.2,<9",
  "pydata-sphinx-theme>=0.15,<1",
  "nbsphinx>=0.9,<1",
  "nbsphinx-link>=1.3,<2",
  "ipython>=8,<10",
]

[project.urls]
Homepage      = "https://github.com/antigenomics/mirpy"
Repository    = "https://github.com/antigenomics/mirpy"
Documentation = "https://antigenomics.github.io/mirpy"
Issues        = "https://github.com/antigenomics/mirpy/issues"

[tool.hatch.build.targets.wheel]
packages = ["mir"]

[tool.hatch.build.targets.sdist]
exclude = [
  ".github/**",
  ".idea/**",
  ".vscode/**",
  "docs/_build/**",
  "notebooks/**",
  "benchmarks/**",
  "tests/**",
  "tmp/**",
  "*.log",
]

[tool.pytest.ini_options]
markers = [
  "benchmark: performance-oriented tests excluded from the default test run",
  "integration: slow or environment-dependent tests excluded from the default test run",
  "slow_benchmark: long-running benchmark with slow timeout budget",
  "very_slow_benchmark: extra long benchmark with very-slow timeout budget",
]

# Coverage is opt-in (not in addopts) so the default fast suite stays fast.
# Measure with: pytest -m "not benchmark and not integration" --cov=mir --cov-report=term-missing
[tool.coverage.run]
source = ["mir"]
branch = true
omit = [
  "mir/resources/gene_library/build_gene_library.py",
  "mir/resources/gene_library/build_region_annotations.py",
  "mir/resources/prototypes/generate_prototypes.py",
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
